# electrical-engineering-and-energy-models

./: LICENSE  README.md
Techniques-and-Analysis-for-Transmission-Lines/1-Dispatch-and-Lost-OPF-Analysis/: B3.py  B3_slide.py  B6L8.py  OPF_linprog_Final_Despacho.py  OPF_linprog_Final_LostDist.py  OPF_linprog_Final_TLostInBREF.py
Techniques-and-Analysis-for-Transmission-Lines/2-Contigency-Analysis-with-Wind-Curtailment-Deficit/: B6L8_wWind.py  OPF_linprog_Final_MinPerdasWWind.py  OPF_linprog_Final_MinPerdasWWind_CTG.py  README.md  ieee118.py  requirements.txt
Techniques-and-Analysis-for-Transmission-Lines/3-DMR-Solver-Python/: README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_dmr_solver_app.py
Techniques-and-Analysis-for-Transmission-Lines/3-DMR-Solver-Python/dmr_solver/: __init__.py  core.py
Techniques-and-Analysis-for-Transmission-Lines/3-DMR-Solver-Python/examples/: aula8_streamlit_inputs.md  equa_example.py
Techniques-and-Analysis-for-Transmission-Lines/3-DMR-Solver-Python/tests/: test_dmr_solver.py
